public/css/style.css
/* Fonts */

@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700|Ubuntu:300,300i,400,400i,500,500i,700,700i|Inconsolata:400,700');

@font-face {
    font-family: 'OpenDyslexic3';
    src: url('/fonts/OpenDyslexicThree-Bold.woff2') format('woff2'),
        url('/fonts/OpenDyslexicThree-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'OpenDyslexic3';
    src: url('/fonts/OpenDyslexicThree-Regular.woff2') format('woff2'),
        url('/fonts/OpenDyslexicThree-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* Colors */

body {
  color: #1a1717;
  background: #F9F9FA;
}
a {
  color: #338fc2;
}

a:hover {
    color: #ce1717;
    text-decoration: underline;
}

blockquote {
  border-left: 2px solid #bbb;
  color: #777;
  padding-left: 0.5rem;
  margin: 0;
}

.post-action-button {
  color: #aaa;
}
hr {
  color: #cbcbcb;
}
#topNav{
  border-bottom-color:#ce1717;
  background: white;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
}
#navTitle {
  color: white;
  background: #ce1717;
}
#navbarProfileImage.active {
  border: 1px solid #900202;
}
#navbarProfileImage:hover {
  border: 1px solid #ce1717;
}
#navTitle a {
  color: #ce1717;
}

#navbarSearchField {
  background: #f3f3f3;
  border-color: #e1e1e1;
  font-family: 'Inconsolata', monospace;
  width: 180px;
}

#topNav .nav-link,
#topNav .nav-link:visited,
#topNav .nav-link:active,
#notificationsDropdownLink {
  color: #666;
}
#topNav .nav-link.active {
  color: #900202;
}
#notificationsDropdownLink:hover,
#topNav .nav-link:hover {
  color: #ce1717;
}
#topNav .dropdown-item {
  color: #666;
}
.userForm {
  background: #fff;
  border: 1px solid #e7e7e7;
}
.btn-fade {
  background: #aaa;
  border-color: #aaa;
}
#resultsContainer,
#directoryResults,
.commentsList {
  border: 1px solid #dfdfdf;
  background: white;
}
.commentContainer {
	/* background: #fafafa; */
	/* border-radius: 5px; */
	padding: 15px;
	/* margin-bottom: 10px; */
	border-bottom: 1px solid #dfdfdf;
  padding-bottom: 0px;
}
#searchHeader,
#postForm {
  border-top: 1px solid #dfdfdf;
  border-left: 1px solid #dfdfdf;
  border-right: 1px solid #dfdfdf;
  background: white;
  padding: 15px;
}
#postForm:hover {
  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
}
.content-box {
  border-bottom: 1px solid #dfdfdf;
}
.content-box:hover {
  box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
}
article.post:hover {
    box-shadow: 0px 0px 6px rgba(0,0,0,0.2);
}
section.comments {
  background: #f6f6f6;
  border-top: 1px solid #eaeaea;
}
.user-list li{
  border: 1px solid #dfdfdf;
}
.user-list li:hover {
  background: #f1f1f1;
}
#image-preview {
  background-color: #ffffff;
  color: #ecf0f1;
	border: 1px dashed #ced4da;
}
#image-preview label {
  background-color: #ced4da;
	color: #555;
}
.notificationLink {
  background: #f9f9fa;
  color: #707070 !important;
}
.notification-active {
  background: #eaeaea;
  color: rgb(73, 80, 87) !important;
}
.authorLink {
  color: #1a1717;
}
.read-more__link-wrap {
  color: #007bff;
}
.switch-field label {
	background-color: #e4e4e4;
	color: rgba(0, 0, 0, 0.6);
	border: 1px solid rgba(0, 0, 0, 0.2);
	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.1);
}
.switch-field input:checked + label {
  background-color: #cb5e4c;
  color: white;
}
.add-emoji:hover {
  border-color: #ddd;
}

.community-tags .badge {
  color: white !important;
  background: #aaa;
}
.comment-button {
  color: #aaa;
}
.comment-button:hover,
.comment-button:active {
  /* color: #0069d9; */
  color: #cb5e4c !important;
}
.btn-link:hover,
.btn-link:active {
  color: #cb5e4c !important;
}
.btn-primary:hover,
.btn-primary:active {
  color: #fff !important;
  background-color: #cb5e4c !important;
  border-color: #b06357 !important;
}
.image-preview {
  background-color: #fff;
  border: 1px dashed #d5d5d5;
}
.two-images img,
.three-images img,
.four-images img {
  border: 1px solid #eaeaea;
}
.post-single-image {
  border-bottom: 1px solid transparent;
}
.post-images.two-images .post-single-image:hover,
.post-images.three-images .post-single-image:hover,
.post-images.four-images .post-single-image:hover {
  border: 1px solid #9b9b9b;
}
.post-images.one-image {
  border: 1px solid transparent;
  transition: border 100ms ease-in;
      border-radius: 4px;
}
.post-images.one-image:hover {
  border: 1px solid #9b9b9b;
}
.post-images.one-image .post-single-image {
    width: auto;
    max-width: 100%;
}
.image-clear {
  background-color: #ffffff99;
  color: #000000;
}
.image-preview {
  background-color: #f6f6f6 !important;
}
#nav-tabContent,
#communitiesTabContent {
  background: white;
  border-left: 1px solid #dee2e6;
  border-right: 1px solid #dee2e6;
  border-bottom: 1px solid #dee2e6;
}
#editBody #nav-tabContent {
  border: 1px solid #dee2e6;
}
.loader-ellips__dot {
  background: #ababab;
}
.page-load-status > * {
  color: #ababab;
}
#newPostsAvailable {
  background: #ececec;
  border-left: 1px solid #dfdfdf;
  border-right: 1px solid #dfdfdf;
  border-top: 1px solid #dfdfdf;
  color: #6c6c6c;
  box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 4px inset;
}
#newPostsAvailable a{
  color: #6c6c6c;
}
.subscribed-alert {
  color: #909090;
}

.subscribed-alert a{
  color: #6f6f6f;
}

.new-comment-form {
  background-color: #ffffffaa;
  box-shadow: inset 0 2px 3px rgba(0,0,0,0.09);
  padding: 1rem 1.25rem;
}
.comment .new-comment-form {
  background-color: transparent;
  box-shadow: none;
  padding-left: 10%;
  padding-right: 0.5rem;
  padding-bottom: 0;
  padding-top: 0.5rem;
}
.pane {
    background: #fff;
    border: 1px solid #dee2e6;
}


p {
  margin-bottom: 0.5em;
}

#bodyContainer {
  padding-top: 90px;
  padding-bottom: 20px;
}

@media screen and (max-width: 768px) {
   #bodyContainer { width: 100%; padding-left: 0px; padding-right: 0px; padding-top:70px;}
 }
/* ... */

